--- a/varicity-backend/persistent/default-configs/config.yaml
+++ b/varicity-backend/persistent/default-configs/config.yaml
@@ -53,10 +53,15 @@ fnf_base:
         color: "#ff5733"
       - name: "VARIANT_FOLDER"
         color: "#5ee7c0"
-      - name: "VARIANT_FILE"
-        color: "#df5ee7"
+      - name: "DIRECTORY"
+        color: "#2d5b08"
       - name: "CORE_FILE"
         color: "#860d3f"
+      - name: "VARIANT_FILE"
+        color: "#df5ee7"
+      - name: "FILE"
+        color: "#555555"
+      
 
 district:
   padding: 0
