Different color for each family of variant files (based on name). Colors generated with golden ratio

--- a/varicity-backend/persistent/default-configs/config.yaml
+++ b/varicity-backend/persistent/default-configs/config.yaml
@@ -54,9 +54,9 @@ fnf_base:
       - name: "VP_FOLDER"
         color: "#ff5733"
       - name: "VARIANT_FOLDER"
-        color: "#5ee7c0"
+        color: "#4c8e0a"
       - name: "DIRECTORY"
-        color: "#2d5b08"
+        color: "#ffffff"
       - name: "CORE_FILE"
         color: "#860d3f"
       - name: "VARIANT_FILE"
