--- a/varicity-backend/persistent/default-configs/config.yaml
+++ b/varicity-backend/persistent/default-configs/config.yaml
@@ -52,11 +52,11 @@ fnf_base:
       - name: "CROWN"
         color: "#f535e1"
       - name: "VP_FOLDER"
-        color: "#ff5733"
+        color: "#3b107e"
       - name: "VARIANT_FOLDER"
-        color: "#4c8e0a"
+        color: "#5e2bb1"
       - name: "DIRECTORY"
-        color: "#ffffff"
+        color: "#555555"
       - name: "CORE_FILE"
         color: "#860d3f"
       - name: "VARIANT_FILE"
@@ -66,7 +66,8 @@ fnf_base:
     edges:
       - name: "CROWN"
         color: "#f535e1"
-      
+        
+force_color: "#555555"   
 
 district:
   padding: 0
@@ -96,11 +97,12 @@ link:
       - "IMPLEMENTS"
       - "EXTENDS"
       - "CODE_CLONE"
+      - "BRIDGE"
     bridges:
-      - "EXPORT"
+      - "CODE_CLONE"
+      - "BRIDGE"
     underground_road:
       - "USAGE"
-      - "BRIDGE"
 #      - "CHILD"
 
 hierarchy_links:
